Fix overflowing inside grid elements (#6054)

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Form/grid.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Form/grid.scss
@@ -5,7 +5,7 @@
 
 .grid {
     margin-bottom: -$sectionMarginBottom;
-    overflow-y: hidden;
+    contain: layout;
 }
 
 .grid-section {
